--- a/pom.xml
+++ b/pom.xml
@@ -1,136 +1,93 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.studybook</groupId>
-  <artifactId>studybook-app</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <description>java studybook app</description>
-  
-  <!-- 디펜던시의 버전관리 -->
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.4.0</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>com.studybook</groupId>
+	<artifactId>studybook-boot-app</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>studybook-boot-app</name>
+	<description>studybook application</description>
+
 	<properties>
-		<org.springframework-version>4.3.2.RELEASE</org.springframework-version>
-		<commons-dbcp-version>1.4</commons-dbcp-version>
-		<spring-jdbc-version>4.3.2.RELEASE</spring-jdbc-version>
-		<spring-test-version>4.3.2.RELEASE</spring-test-version>
-		<mysql-version>8.0.18</mysql-version>
-		<org.mybatis-version>3.5.5</org.mybatis-version>
-		<org.mybatis-spring-version>2.0.5</org.mybatis-spring-version>
-		<jstl-version>1.2</jstl-version>
-		<logback.version>1.1.1</logback.version>
-		<jcloverslf4j.version>1.7.6</jcloverslf4j.version>
+		<java.version>1.8</java.version>
 	</properties>
 
-	<!-- 프로젝트에 필요한 디펜던시 모아두기 -->
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+		<dependency>
+		    <groupId>com.auth0</groupId>
+		    <artifactId>java-jwt</artifactId>
+		    <version>3.10.3</version>
+		</dependency>
+		
 	
-		<!-- jackson-databind, jackson-core : json형식의 파일을 전달할 수 있게 함 -->
+		<!-- 스프링 시큐리티 : 비밀번호 암호화, 인증, 권한 처리 -->
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.11.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.11.1</version>
-		</dependency>
-
-		<!-- jstl : jsp에서 스크립트릿문법보다 간편하게 자바문법사용가능 -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>${jstl-version}</version>
-		</dependency>
-
-		<!-- security-core, security-web, security-config : 스프링 인증관련 디펜던시 -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>5.1.2.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>5.1.2.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>5.1.2.RELEASE</version>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 
-		<!-- mybatis를 spring과 연결하기 위한 디펜던시 -->
+		<!-- 스프링 JPA : ORM을 쉽게 사용 -->
 		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>${org.mybatis-spring-version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!-- mybatis, mybatis-spring : sql 쿼리를 사용하기 쉽게하는 디펜던시 -->
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>${org.mybatis-version}</version>
-		</dependency>
-		<!-- mysql-connector-java : mysql 드라이버 -->
+
+		<!-- Mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql-version}</version>
-		</dependency>
-		<!-- spring jdbc : 기존의 jdbc 보다 간편함 -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>${spring-jdbc-version}</version>
-		</dependency>
-		<!-- Common DBCP : 커넥션풀 방식으로 효육적인 jdbc 사용 -->
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>${commons-dbcp-version}</version>
+			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Spring-context : 스프링의 핵심이 되는 디펜던시 집합체(core, aop, beans 등 포함) -->
+		<!-- Lombok : dto, vo, domain 클래스의 getter, setter 를 생략 가능하게 함 -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${org.springframework-version}</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
 
-		<!-- Spring-webmvc : spring mvc 프로젝트를 사용하기 위한 디펜던시 -->
+		<!-- 스프링 부트의 웹 관련 어노테이션을 제공 -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${org.springframework-version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- Logback -->
+		<!-- 테스트 코드 작성 제공 -->
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${jcloverslf4j.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
+
+		<!-- 핫리로더와 같이 파일 수정시 자동으로 리컴파일 -->
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>${logback.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
-	<!-- 메이븐 프로젝트의 빌드 설정 , 관련 플러그인들을 필요한 부분만 가져다 설정할 수 있다. -->
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
