--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.studybook</groupId>
 	<artifactId>studybook-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>studybook-app</name>
+	<name>springboot-security-oauth-app</name>
 	<description>studybook application</description>
 
 	<properties>
